--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ streamlit = "^1.35.0"
 black = "^24.4.2"
 streamlit-extras = "^0.4.3"
 plotly = "^5.22.0"
+streamlit-pandas-profiling = "^0.1.3"
 
 
 [build-system]
