--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ black = "^24.4.2"
 streamlit-extras = "^0.4.3"
 plotly = "^5.22.0"
 streamlit-pandas-profiling = "^0.1.3"
+opencv-python = "^4.9.0.80"
 
 
 [build-system]
