--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ plotly = "^5.22.0"
 streamlit = "^1.35.0"
 streamlit-extras = "^0.4.3"
 streamlit-aggrid = "^1.0.5"
+streamlit-navigation-bar = "^3.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
