--- a/.gitignore
+++ b/.gitignore
@@ -173,4 +173,7 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+# devcontainer
+.devcontainer/  
+
 # End of https://www.toptal.com/developers/gitignore/api/python
