--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,32 @@
-[tool.poetry]
+[project]
 name = "crk-guild-darkcacao"
-version = "0.1.0"
+dynamic = [ "version" ]
 description = "Streamlit App to provide information of the Guild Battle Leaderboard: Cookie Run Kingdom's Dark Cacao server."
-authors = ["SantaMonica"]
+authors = [
+    { name = "SantaMonica", email = "nuttysang@gmail.com" },
+]
 readme = "README.md"
+requires-python = ">=3.11"
+dependencies = [
+    "pandas>=2.3.0",
+    "plotly>=6.1.0",
+    "streamlit>=1.45.0",
+    "streamlit-extras>=0.4.3",
+    "streamlit-aggrid>=1.0.5",
+    "streamlit-navigation-bar>=3.3.0",
+]
+
+
+
+[tool.poetry]
+version = "1.0"  # base version
 package-mode = false
 
 
 
+
 [tool.poetry.dependencies]
-python = "^3.11"
-pandas = "^2.2.2"
-plotly = "^5.22.0"
-streamlit = "^1.35.0"
-streamlit-extras = "^0.4.3"
-streamlit-aggrid = "^1.0.5"
-streamlit-navigation-bar = "^3.3.0"
-
-
-[tool.poetry.group.dev.dependencies]
-ipykernel = "^6.29.4"
+python = "^3.11,<4.0"
 
 [build-system]
 requires = ["poetry-core"]
