--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "streamlit-extras>=0.4.3",
     "streamlit-aggrid>=1.0.5",
     "streamlit-navigation-bar>=3.3.0",
+    "openpyxl (>=3.1.5,<4.0.0)",
 ]
 
 
