--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Created by https://www.toptal.com/developers/gitignore/api/python
-# Edit at https://www.toptal.com/developers/gitignore?templates=python
-
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -176,4 +173,12 @@ pyrightconfig.json
 # devcontainer
 .devcontainer/  
 
-# End of https://www.toptal.com/developers/gitignore/api/python
+# vscode
+.vscode
+*.code-workspace
+
+# Tableau
+*.twb
+*.twbx
+*.twbr
+*.hyper
